Enhance update-readme workflow with Perl script
Added Perl script to update models section in README files.

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -108,6 +108,18 @@ jobs:
           ' README.md
 
 
+          # 使用 Perl 跨行替换 START/END 区域
+          perl -CS -0777 -i -pe '
+            BEGIN {
+              local $/;   # slurp whole file
+              open my $fh, "<:utf8", "models_table.md" or die $!;
+              $table = <$fh>;
+              close $fh;
+            }
+            s|<!-- START:models -->.*?<!-- END:models -->|<!-- START:models -->\n$table\n<!-- END:models -->|s
+          ' README.zh-CN.md
+
+
       - name: Commit & Push
         run: |
           git config user.name "github-actions[bot]"
