--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -125,6 +125,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add README.md
+          git add README.zh-CN.md
           git commit -m "update HuggingFace models list" || echo "No changes"
           git push
 
