--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -96,30 +96,32 @@ jobs:
           # 写入临时表格文件
           echo "${{ steps.fetch.outputs.content }}" > models_table.md
 
+          # 要更新的 README 文件列表
           FILES=("README.md" "README.zh-CN.md")
 
           for FILE in "${FILES[@]}"; do
-            perl -0777 -i -pe '
-              my $file = $ARGV[0];
-
-              # 读取临时表格
+            perl -Mutf8 -0777 -pe '
+              # 读取表格内容
               open my $fh, "<:encoding(UTF-8)", "models_table.md" or die $!;
               my $table = do { local $/; <$fh> };
               close $fh;
 
-              # 读取目标 README 文件
-              open my $in, "<:encoding(UTF-8)", $file or die $!;
+              # 读取 README 内容
+              open my $in, "<:encoding(UTF-8)", $ARGV[0] or die $!;
               my $content = do { local $/; <$in> };
               close $in;
 
               # 替换 START/END 区域
               $content =~ s|<!-- START:models -->.*?<!-- END:models -->|<!-- START:models -->\n$table\n<!-- END:models -->|s;
 
-              # 写回文件
-              open my $out, ">:encoding(UTF-8)", $file or die $!;
+              # 写回临时文件
+              open my $out, ">:encoding(UTF-8)", "$ARGV[0].tmp" or die $!;
               print $out $content;
               close $out;
             ' "$FILE"
+
+            # 覆盖原文件
+            mv "$FILE.tmp" "$FILE"
           done
       - name: Commit & Push
         run: |
